--- a/html/ej6.html
+++ b/html/ej6.html
@@ -27,7 +27,7 @@
                     <div class="collapse" id="collapseExample" data-parent="#myGroup">
                         <div class="card card-body">
                             <p>Subir archivo</p>
-                            <input name="file-input" id="file-input" type="file" />  
+                            <input name="file-input" id="file-input" type="file" accept="image/*" />  
                         </div>
                     </div>
                     <div class="collapse" id="collapseExample2" data-parent="#myGroup">
@@ -36,7 +36,6 @@
                                 <img  class="img-thumbnail imgcharge" src="img/aguila.jpg">
                                 <img class="img-thumbnail imgcharge" src="img/gato.jpg">   
                                 <img class="img-thumbnail imgcharge" src="img/paisaje.jpg">     
-
                             </div>
                         </div>
                     </div>
@@ -45,7 +44,7 @@
                 <div class="custom-control custom-switch switch">
                     <input type="checkbox" class="custom-control-input filtro" id="customSwitch1">
                     <label class="custom-control-label" for="customSwitch1">Activar filtro de escala de grises</label>
-                </div>.
+                </div>
                 
                 <canvas id="canvas" width="500" height="500"></canvas> 
                 
