Corrigiendo detalles en el index

--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="index.html">
             <img src="img/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
-            Visualizaciones e Interfaces
+            Visualizaciones e Interfaces - Segunda Entrega
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -24,7 +24,6 @@
     </nav>
     <main role="main" class="container noticias">
         <div class="starter-template">
-            <h1>Segunda entrega</h1>
             <!-- <p class="lead">* Ya se encuentra subida la primer entrega</p> -->
         </div>
         
