Agregando pantalla de inicio, cambiando reset

--- a/TP3/EntregaFinal/index.html
+++ b/TP3/EntregaFinal/index.html
@@ -39,7 +39,15 @@
 		<img id="imgover" src="images/gameover.png" alt="">
 		<div id="gameOver" class="score">
 			<p>Tu puntaje fue de <span id="scoreEndGame"></span> puntos</p>
-			<a class="btn btnReiniciar" role="button" href="index.html"><i class="fa fa-refresh" aria-hidden="true"></i>Volver a Jugar</a>
+			<a id="reiniciar" class="btn btnReiniciar" role="button" href="">Volver a Jugar</a>
+		</div>
+	</div>
+	<div class="container-fluid row justify-content-md-center ">
+		<div id="inicio">
+			<h1 class="bienvenidafont">ZOMBIEEE RUNNER</h1>
+			<div class="bienvenida">
+				<a class="btn btnPlay" id="play" role="button" href="">Play</a>
+			</div>
 		</div>
 	</div>
 	
