Correcciones en el salto y generacion de vidas

--- a/TP3/EntregaFinal/index.html
+++ b/TP3/EntregaFinal/index.html
@@ -46,7 +46,7 @@
 		<div id="inicio">
 			<h1 class="bienvenidafont">ZOMBIEEE RUNNER</h1>
 			<div class="bienvenida">
-				<a class="btn btnPlay" id="play" role="button" href="">Play</a>
+				<a class="btn btnPlay" id="play" role="button" href="">Play Game</a>
 			</div>
 		</div>
 	</div>
