--- a/TP5/EntregaFinal/index.html
+++ b/TP5/EntregaFinal/index.html
@@ -12,13 +12,13 @@
       crossorigin="anonymous"
     /> -->
     <link rel="icon" type="image/x-icon" href="favicon.svg" />
-    <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
       <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link rel="stylesheet" href="styles.e30d281272d0783c8055.css"></head>
   <body>
     <app-root></app-root>
-  <script src="runtime-es2015.edb2fcf2778e7bf1d426.js" type="module"></script><script src="runtime-es5.edb2fcf2778e7bf1d426.js" nomodule defer></script><script src="polyfills-es5.ef4b1e1fc703b3ff76e3.js" nomodule defer></script><script src="polyfills-es2015.2987770fde9daa1d8a2e.js" type="module"></script><script src="scripts.b981ed17f29106dea6f7.js" defer></script><script src="main-es2015.b19ca6a31c89088e1176.js" type="module"></script><script src="main-es5.b19ca6a31c89088e1176.js" nomodule defer></script></body>
+  <script src="runtime-es2015.edb2fcf2778e7bf1d426.js" type="module"></script><script src="runtime-es5.edb2fcf2778e7bf1d426.js" nomodule defer></script><script src="polyfills-es5.ef4b1e1fc703b3ff76e3.js" nomodule defer></script><script src="polyfills-es2015.2987770fde9daa1d8a2e.js" type="module"></script><script src="scripts.b981ed17f29106dea6f7.js" defer></script><script src="main-es2015.dbf4020407dfa3f6bcb5.js" type="module"></script><script src="main-es5.dbf4020407dfa3f6bcb5.js" nomodule defer></script></body>
   <!-- <script
     src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
